package edu.fiuba.algo3.modelo;

public class Ocupado implements Estado{

    public Ocupado() {
    }
    public boolean puedeOcupar(){
        return false;
    }



}
