package edu.fiuba.algo3.modelo;

public class Vacante implements Estado{

    public Vacante() {
    }
    public boolean puedeOcupar(){
        return true;
    }


}
