package edu.fiuba.algo3.modelo.pais;

import edu.fiuba.algo3.modelo.Jugador;

public interface EstadoPais {

    public void ocuparPais (Jugador jugador, Pais pais);
}
