@startuml
Juego  *- Tablero
Juego "1" -- "2..6" Jugador
Juego "1" *-- "*" TarjetaPais
Juego "1" *--- "*" TarjetaObjetivo
Aleatorio <. Juego
Tablero . Jugador


Canjes "1" o-- "*" Canje
Canjes ..> "*" TarjetaPais
Canjes ..> Jugador
Canje "1" o-- "3" TarjetaPais
Canje ..> Jugador

Pais ->  Ejercito

Interface EstadoTarjetaPais
Interface Simbolo


Tablero "1" *-- "6" Continente
Tablero "1" *-- "*" Pais
Continente "1" *-- "1..*" Pais

Jugador "1" -- "1..*" Pais

Interface EstadoTarjetaPais
Interface Simbolo

TarjetaPais *-- EstadoTarjetaPais
EstadoTarjetaPais <|.. Activada
EstadoTarjetaPais <|.. Desactivada

TarjetaPais *-- Simbolo
Simbolo <|.. Comodin
Simbolo <|.. Figura

TarjetaObjetivo <|-- TarjetaDestruccion
TarjetaObjetivo <|-- TarjetaOcupacion
TarjetaObjetivo  --  Jugador

Ejercito  -->  "Dados"
Jugador  --->  Canjes


Tablero -> Batalla
Jugador "1" -> "*" TarjetaPais
Batalla "1" --> "2" Pais

Pais *-- EstadoPais
EstadoPais <|.. Vacante
EstadoPais <|.. Ocupado


class Aleatorio {

}

class Batalla {

}

class Continente {

}

class Dados {

}

class Ejercito {

}

class Juego {

}

class Jugador {

}

class Moderador {

}

class Tablero {
}

class Activada {

}

class Comodin {
}

class Desactivada {
}

interface EstadoTarjetaPais {
}

class Figura {

}

interface Simbolo {

}

class TarjetaPais {

}

class TarjetaDestruccion {

}

abstract class TarjetaObjetivo {

}

class TarjetaOcupacion {

}

interface EstadoPais {
}

class Ocupado {

}

class Pais {

}

class Vacante {

}

class Canje {

}

class Canjes {

}
@enduml